access functionality programmatically